--- a/index.html
+++ b/index.html
@@ -142,6 +142,46 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <img src="./Product Images/prd_9.webp" alt="Product 9">
+                        <div class="card-body">
+                            <h5 class="card-title" data-id="9">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                            <p class="card-text">$90</p>
+                            <button class="btn btn-primary" onclick="addToCart(9)">Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <img src="./Product Images/prd_10.jpg" alt="Product 10">
+                        <div class="card-body">
+                            <h5 class="card-title" data-id="10">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                            <p class="card-text">$100</p>
+                            <button class="btn btn-primary" onclick="addToCart(10)">Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <img src="./Product Images/prd_11.jpg" alt="Product 11">
+                        <div class="card-body">
+                            <h5 class="card-title" data-id="11">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                            <p class="card-text">$110</p>
+                            <button class="btn btn-primary" onclick="addToCart(11)">Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
+                    <div class="product-card">
+                        <img src="./Product Images/prd_12.webp" alt="Product 12">
+                        <div class="card-body">
+                            <h5 class="card-title" data-id="11">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                            <p class="card-text">$120</p>
+                            <button class="btn btn-primary" onclick="addToCart(12)">Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
