--- a/index.html
+++ b/index.html
@@ -26,35 +26,40 @@
         }
     </style>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">E-commerce</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <button class="cart" onclick="displayCart()">Display cart</button>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Products</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link position-relative" href="#">
-                            <i class="fa-solid fa-cart-shopping" style="color: blueviolet;"></i>
-                            <span class="cart-badge"></span>
-                            <span class="cart-total"></span>
-                        </a>
-                    </li>
-                </ul>
+   
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">SHALIK-GLOW</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <button class="cart" onclick="displayCart()">Display cart</button>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Products</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="navbar-nav">
+                    <a class="nav-link position-relative" href="#">
+                        <i class="fa-solid fa-cart-shopping" style="color: blueviolet;"></i>
+                        <span class="cart-badge"></span>
+                        <span class="cart-total"></span>
+                    </a>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
+
+
+    
+    
 
     <div class="container mt-5 mb-5">
 
@@ -63,122 +68,122 @@
         <div class="container pt-5 pb-5">
             <div class="row row-cols-4 gy-4 pt-5">
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_1.jpg" alt="Product 1">
                         <div class="card-body">
                             <h5 class="card-title" data-id="1">Cosrx Advance Snail 92 all in one cream (100ml)</h5>
                             <p class="card-text">$10</p>
-                            <button class="btn btn-primary" onclick="addToCart(1)">Add to Cart</button>
+                            <button class="button" onclick="addToCart(1)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_2.jpg" alt="Product 2">
                         <div class="card-body">
                             <h5 class="card-title" data-id="2">Cosrx AHA/BHA Clarifying Treatment Toner</h5>
                             <p class="card-text">$20</p>
-                            <button class="btn btn-primary" onclick="addToCart(2)">Add to Cart</button>
+                            <button class="button " onclick="addToCart(2)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_3.jpg" alt="Product 3">
                         <div class="card-body">
                             <h5 class="card-title" data-id="3">Cosrx Advance Snail 96 Mucin Power Essence</h5>
                             <p class="card-text">$30</p>
-                            <button class="btn btn-primary" onclick="addToCart(3)">Add to Cart</button>
+                            <button class="button" onclick="addToCart(3)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_4.jpg" alt="Product 4">
                         <div class="card-body">
                             <h5 class="card-title" data-id="4">Cosrx The Vitamin C 23 Serum</h5>
                             <p class="card-text">$40</p>
-                            <button class="btn btn-primary" onclick="addToCart(4)">Add to Cart</button>
+                            <button class="button" onclick="addToCart(4)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_5.jpg" alt="Product 5">
                         <div class="card-body">
                             <h5 class="card-title" data-id="5">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
                             <p class="card-text">$50</p>
-                            <button class="btn btn-primary" onclick="addToCart(5)">Add to Cart</button>
+                            <button class="button" onclick="addToCart(5)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_6.jpg" alt="Product 6">
                         <div class="card-body">
-                            <h5 class="card-title" data-id="6">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                            <h5 class="card-title" data-id="6"> Missha Ultra Hyalron Foaming Cleanser  </h5>
                             <p class="card-text">$60</p>
-                            <button class="btn btn-primary" onclick="addToCart(6)">Add to Cart</button>
+                            <button class="button" onclick="addToCart(6)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_7.jpg" alt="Product 7">
                         <div class="card-body">
-                            <h5 class="card-title" data-id="7">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                            <h5 class="card-title" data-id="7"> Missha M B.B Boomer  </h5>
                             <p class="card-text">$70</p>
-                            <button class="btn btn-primary" onclick="addToCart(7)">Add to Cart</button>
+                            <button class="button" onclick="addToCart(7)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_8.jpg" alt="Product 8">
                         <div class="card-body">
-                            <h5 class="card-title" data-id="8">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                            <h5 class="card-title" data-id="8"> Missha M Perfect Cover B.B Cream </h5>
                             <p class="card-text">$80</p>
-                            <button class="btn btn-primary" onclick="addToCart(8)">Add to Cart</button>
+                            <button class="button" onclick="addToCart(8)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_9.webp" alt="Product 9">
                         <div class="card-body">
-                            <h5 class="card-title" data-id="9">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                            <h5 class="card-title" data-id="9"> 3W Clinic Intensive UV Sunblock Cream SPF50+/PA+++  </h5>
                             <p class="card-text">$90</p>
-                            <button class="btn btn-primary" onclick="addToCart(9)">Add to Cart</button>
+                            <button class="button" onclick="addToCart(9)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_10.jpg" alt="Product 10">
                         <div class="card-body">
-                            <h5 class="card-title" data-id="10">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                            <h5 class="card-title" data-id="10"> TIAM Daily Sun Care Cream SPF50+ PA++++ </h5>
                             <p class="card-text">$100</p>
-                            <button class="btn btn-primary" onclick="addToCart(10)">Add to Cart</button>
+                            <button class="button" onclick="addToCart(10)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_11.jpg" alt="Product 11">
                         <div class="card-body">
-                            <h5 class="card-title" data-id="11">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                            <h5 class="card-title" data-id="11"> Cosrx advance snail 92 all in one cream (Tube) </h5>
                             <p class="card-text">$110</p>
-                            <button class="btn btn-primary" onclick="addToCart(11)">Add to Cart</button>
+                            <button class="button" onclick="addToCart(11)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card">
+                    <div class="product-card card" id="bor" >
                         <img src="./Product Images/prd_12.webp" alt="Product 12">
                         <div class="card-body">
-                            <h5 class="card-title" data-id="11">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                            <h5 class="card-title" data-id="12"> AXIS-Y Dark Spot Correcting Glow Serum </h5>
                             <p class="card-text">$120</p>
-                            <button class="btn btn-primary" onclick="addToCart(12)">Add to Cart</button>
+                            <button class="button" onclick="addToCart(12)">Add to Cart</button>
                         </div>
                     </div>
                 </div>
