fixed add to cart button alignment

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="container pt-5 pb-5">
             <div class="row row-cols-4 gy-4 pt-5">
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100" id="bor" >
                         <img src="./Product Images/prd_1.jpg" alt="Product 1">
                         <div class="card-body">
                             <h5 class="card-title" data-id="1">Cosrx Advance Snail 92 all in one cream (100ml)</h5>
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100" id="bor" >
                         <img src="./Product Images/prd_2.jpg" alt="Product 2">
                         <div class="card-body">
                             <h5 class="card-title" data-id="2">Cosrx AHA/BHA Clarifying Treatment Toner</h5>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100" id="bor" >
                         <img src="./Product Images/prd_3.jpg" alt="Product 3">
                         <div class="card-body">
                             <h5 class="card-title" data-id="3">Cosrx Advance Snail 96 Mucin Power Essence</h5>
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100 h-100" id="bor" >
                         <img src="./Product Images/prd_4.jpg" alt="Product 4">
                         <div class="card-body">
                             <h5 class="card-title" data-id="4">Cosrx The Vitamin C 23 Serum</h5>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100" id="bor" >
                         <img src="./Product Images/prd_5.jpg" alt="Product 5">
                         <div class="card-body">
                             <h5 class="card-title" data-id="5">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100" id="bor" >
                         <img src="./Product Images/prd_6.jpg" alt="Product 6">
                         <div class="card-body">
                             <h5 class="card-title" data-id="6"> Missha Ultra Hyalron Foaming Cleanser  </h5>
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100" id="bor" >
                         <img src="./Product Images/prd_7.jpg" alt="Product 7">
                         <div class="card-body">
                             <h5 class="card-title" data-id="7"> Missha M B.B Boomer  </h5>
@@ -138,7 +138,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100" id="bor" >
                         <img src="./Product Images/prd_8.jpg" alt="Product 8">
                         <div class="card-body">
                             <h5 class="card-title" data-id="8"> Missha M Perfect Cover B.B Cream </h5>
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100" id="bor" >
                         <img src="./Product Images/prd_9.webp" alt="Product 9">
                         <div class="card-body">
                             <h5 class="card-title" data-id="9"> 3W Clinic Intensive UV Sunblock Cream SPF50+/PA+++  </h5>
@@ -158,7 +158,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100" id="bor" >
                         <img src="./Product Images/prd_10.jpg" alt="Product 10">
                         <div class="card-body">
                             <h5 class="card-title" data-id="10"> TIAM Daily Sun Care Cream SPF50+ PA++++ </h5>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100" id="bor" >
                         <img src="./Product Images/prd_11.jpg" alt="Product 11">
                         <div class="card-body">
                             <h5 class="card-title" data-id="11"> Cosrx advance snail 92 all in one cream (Tube) </h5>
@@ -178,7 +178,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-xs-12 cols-sm-12 col-md-6 col-lg-3">
-                    <div class="product-card card" id="bor" >
+                    <div class="product-card card h-100" id="bor" >
                         <img src="./Product Images/prd_12.webp" alt="Product 12">
                         <div class="card-body">
                             <h5 class="card-title" data-id="12"> AXIS-Y Dark Spot Correcting Glow Serum </h5>
