--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-commerce Website</title>
+    <title>Shalik Glow Corner</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
         integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -266,8 +266,8 @@
 
 
             <!-- Name -->
-            <div class="row-cols-2 d-flex">
-                <div class="col">
+            <div class="row d-flex">
+                <div class="col-12 col-md-6 col-lg-6">
                     <label for="pick_date" class="form-label">
                         First Name
                         <span class="text-danger">*</span>
@@ -275,7 +275,7 @@
                     <input type="text" class="form-control text-black" id="first_name" required />
 
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-6">
                     <label for="pick_date" class="form-label">
                         Last Name
                         <span class="text-danger">*</span>
