--- a/index.html
+++ b/index.html
@@ -271,22 +271,41 @@
 
 
             <!-- Name -->
-            <div class="row d-flex">
-                <div class="col-12 col-md-6 col-lg-6 mb-3 mb-md-0"> <!-- Add mb-3 to add margin bottom -->
-                    <label for="first_name" class="form-label">
-                        First Name
-                        <span class="text-danger">*</span>
-                    </label>
-                    <input type="text" class="form-control text-black" id="first_name" required />
-                </div>
-                <div class="col-12 col-md-6 col-lg-6"> <!-- Adjust column width for mobile view -->
-                    <label for="last_name" class="form-label">
-                        Last Name
-                        <span class="text-danger">*</span>
-                    </label>
-                    <input type="text" class="form-control text-black" id="last_name" required />
+            <div class="container pb-5">
+                <div class="row row-cols-4 gy-4 pt-5">
+                    <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
+                        <label for="first_name" class="form-label">
+                            First Name
+                            <span class="text-danger">*</span>
+                        </label>
+                        <input type="text" class="form-control text-black" id="first_name" required />
+                    </div>
+                    <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
+                        <label for="first_name" class="form-label">
+                            First Name
+                            <span class="text-danger">*</span>
+                        </label>
+                        <input type="text" class="form-control text-black" id="first_name" required />
+                    </div>
                 </div>
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             
 
 
