--- a/index.html
+++ b/index.html
@@ -282,12 +282,56 @@
                     </div>
                     <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
                         <label for="first_name" class="form-label">
-                            First Name
+                            Last Name
                             <span class="text-danger">*</span>
                         </label>
                         <input type="text" class="form-control text-black" id="first_name" required />
                     </div>
                 </div>
+
+                <div class="row row-cols-4 gy-4 pt-4">
+                    <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
+                        <label for="phone_number" class="form-label">
+                            Phone number
+                            <span class="text-danger">*</span>
+                        </label>
+                        <input type="text" class="form-control text-black" id="first_name" required />
+                    </div>
+                    <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
+                        <label for="Address" class="form-label">
+                            Address
+                            <span class="text-danger">*</span>
+                        </label>
+                        <input type="text" class="form-control text-black" id="first_name" required />
+                    </div>
+                </div>
+
+
+                <div class="row row-cols-4 gy-4 pt-4">
+                    <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
+                        <label for="transaction_id" class="form-label">
+                        Transaction ID
+                        <span class="text-danger">*</span>
+                    </label>
+                    <input type="text" class="form-control text-black" id="transactionId" required />
+                    </div>
+
+                    <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-6">
+                        <label class="form-label">
+                        Services
+                        <span class="text-danger">*</span>
+                    </label>
+                    <select id="selectServices" class="form-select" aria-label="Select Service" required>
+                        <option selected disabled>Select an option</option>
+                        <option value="Service_CashOnDelivery">Cash On Delivery</option>
+                        <option value="Service_bkash">Bkash</option>
+                        <option value="Service_rocket">Rocket</option>
+                        <option value="Service_nexus_pay">Nexus Pay</option>
+                    </select>
+                    </div>
+                </div>
+
+                
             </div>
 
 
