--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@
 
 
 
-    <div class="container">
-        <h1 class="text-center pt-5" style="color: #a230ff; font-weight:700;">SHALIK</h1>
+    <div class="container-fluid" style="background-color: rgb(255, 255, 255);">
+        <h1 class="text-center shalik_shine pt-5">SHALIK GLOW CORNER</h1>
     </div>
     <!-- HEADING END -->
 
@@ -340,13 +340,13 @@
                             Transaction ID
                             <!-- <span class="text-danger">*</span> -->
                         </label>
-                        <input type="text" placeholder="sd" class="form-control text-black" id="transactionId"
+                        <input type="text" placeholder="AH53XXXXX" class="form-control text-black" id="transactionId"
                             required />
                     </div>
 
                 </div>
 
-        
+
 
 
 
