--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">SHALIK-GLOW</a>
+            <a class="navbar-brand" href="#">SHALIK GLOW Corner</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -72,7 +72,7 @@
                         <img src="./Product Images/prd_1.jpg" alt="Product 1">
                         <div class="card-body">
                             <h5 class="card-title" data-id="1">Cosrx Advance Snail 92 all in one cream (100ml)</h5>
-                            <p class="card-text">$10</p>
+                            <p class="card-text text-end">10 ৳</p>
                             <button class="button" onclick="addToCart(1)">Add to Cart</button>
                         </div>
                     </div>
@@ -82,7 +82,7 @@
                         <img src="./Product Images/prd_2.jpg" alt="Product 2">
                         <div class="card-body">
                             <h5 class="card-title" data-id="2">Cosrx AHA/BHA Clarifying Treatment Toner</h5>
-                            <p class="card-text">$20</p>
+                            <p class="card-text text-end">20 ৳</p>
                             <button class="button " onclick="addToCart(2)">Add to Cart</button>
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                         <img src="./Product Images/prd_3.jpg" alt="Product 3">
                         <div class="card-body">
                             <h5 class="card-title" data-id="3">Cosrx Advance Snail 96 Mucin Power Essence</h5>
-                            <p class="card-text">$30</p>
+                            <p class="card-text text-end">30 ৳</p>
                             <button class="button" onclick="addToCart(3)">Add to Cart</button>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                         <img src="./Product Images/prd_4.jpg" alt="Product 4">
                         <div class="card-body">
                             <h5 class="card-title" data-id="4">Cosrx The Vitamin C 23 Serum</h5>
-                            <p class="card-text">$40</p>
+                            <p class="card-text text-end">40 ৳</p>
                             <button class="button" onclick="addToCart(4)">Add to Cart</button>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                         <img src="./Product Images/prd_5.jpg" alt="Product 5">
                         <div class="card-body">
                             <h5 class="card-title" data-id="5">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
-                            <p class="card-text">$50</p>
+                            <p class="card-text text-end">50 ৳</p>
                             <button class="button" onclick="addToCart(5)">Add to Cart</button>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                         <img src="./Product Images/prd_6.jpg" alt="Product 6">
                         <div class="card-body">
                             <h5 class="card-title" data-id="6"> Missha Ultra Hyalron Foaming Cleanser </h5>
-                            <p class="card-text">$60</p>
+                            <p class="card-text text-end">60 ৳</p>
                             <button class="button" onclick="addToCart(6)">Add to Cart</button>
                         </div>
                     </div>
@@ -132,7 +132,7 @@
                         <img src="./Product Images/prd_7.jpg" alt="Product 7">
                         <div class="card-body">
                             <h5 class="card-title" data-id="7"> Missha M B.B Boomer </h5>
-                            <p class="card-text">$70</p>
+                            <p class="card-text text-end">70 ৳</p>
                             <button class="button" onclick="addToCart(7)">Add to Cart</button>
                         </div>
                     </div>
@@ -142,7 +142,7 @@
                         <img src="./Product Images/prd_8.jpg" alt="Product 8">
                         <div class="card-body">
                             <h5 class="card-title" data-id="8"> Missha M Perfect Cover B.B Cream </h5>
-                            <p class="card-text">$80</p>
+                            <p class="card-text text-end">80 ৳</p>
                             <button class="button" onclick="addToCart(8)">Add to Cart</button>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                         <img src="./Product Images/prd_9.webp" alt="Product 9">
                         <div class="card-body">
                             <h5 class="card-title" data-id="9"> 3W Clinic Intensive UV Sunblock Cream SPF50+/PA+++ </h5>
-                            <p class="card-text">$90</p>
+                            <p class="card-text text-end">90 ৳</p>
                             <button class="button" onclick="addToCart(9)">Add to Cart</button>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                         <img src="./Product Images/prd_10.jpg" alt="Product 10">
                         <div class="card-body">
                             <h5 class="card-title" data-id="10"> TIAM Daily Sun Care Cream SPF50+ PA++++ </h5>
-                            <p class="card-text">$100</p>
+                            <p class="card-text text-end">100 ৳</p>
                             <button class="button" onclick="addToCart(10)">Add to Cart</button>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                         <img src="./Product Images/prd_11.jpg" alt="Product 11">
                         <div class="card-body">
                             <h5 class="card-title" data-id="11"> Cosrx advance snail 92 all in one cream (Tube) </h5>
-                            <p class="card-text">$110</p>
+                            <p class="card-text text-end">110 ৳</p>
                             <button class="button" onclick="addToCart(11)">Add to Cart</button>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                         <img src="./Product Images/prd_12.webp" alt="Product 12">
                         <div class="card-body">
                             <h5 class="card-title" data-id="12"> AXIS-Y Dark Spot Correcting Glow Serum </h5>
-                            <p class="card-text">$120</p>
+                            <p class="card-text text-end">120 ৳</p>
                             <button class="button" onclick="addToCart(12)">Add to Cart</button>
                         </div>
                     </div>
@@ -216,17 +216,17 @@
             <tfoot>
                 <tr>
                     <td colspan="3" class="text-end">Subtotal:</td> <!-- Updated colspan to 3 -->
-                    <td class="subtotal-value">$0.00</td> <!-- Added placeholder for subtotal -->
+                    <td class="subtotal-value">0 ৳</td> <!-- Added placeholder for subtotal -->
                     <td></td>
                 </tr>
                 <tr>
                     <td colspan="3" class="text-end">Delivery charges:</td>
-                    <td class="delivery-charge">$60.00</td>
+                    <td class="delivery-charge">60 ৳</td>
                     <td></td>
                 </tr>
                 <tr>
                     <td colspan="3" class="text-end">Total:</td>
-                    <td class="cart-total-value">$0.00</td>
+                    <td class="cart-total-value">0 ৳</td>
                     <td></td>
                 </tr>
             </tfoot>
@@ -366,6 +366,18 @@
                 </div>
 
 
+                <div class="row row-cols-4 gy-4 pt-5">
+                    
+                    <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-4">
+                        
+                    </div>
+
+                    <div class="col-12 col-xs-12 cols-sm-12 col-md-12 col-lg-4 pt-5">
+                        <button type="submit" class="button" style="font-weight: 500;">PLACE ORDER</button>
+                    </div>
+                </div>
+
+
 
 
 
@@ -495,11 +507,10 @@
                     </select>
                 </div>
             </div> -->
-
+<!-- 
             <div class="row pt-5">
-                <button type="submit" class="button-submit" id="submit_button" style="font-weight: 500;">PLACE
-                    ORDER</button>
-            </div>
+                <button type="submit" class="button-submit" id="submit_button" style="font-weight: 500;">PLACE ORDER</button>
+            </div> -->
 
 
 
