--- a/index.html
+++ b/index.html
@@ -632,8 +632,8 @@
                         <div class="col-12 col-lg-6 col-md-6 p-0 mx-2 " style="list-style-type: none;">
                             <li class="pt-4 footer-text"> > About us</li>
                             <li class="pt-4 footer-text"> > Our Services</li>
-                            <li class="pt-4 footer-text"> > Doctors 1</li>
-                            <li class="pt-4 footer-text"> > Doctors 1</li>
+                            <li class="pt-4 footer-text"> > Text 1</li>
+                            <li class="pt-4 footer-text"> > Text 2</li>
                             <li class="pt-4 footer-text"> > Events</li>
                         </div>
                         <div class="col p-0  mx-2" style="list-style-type: none;">
