--- a/index.html
+++ b/index.html
@@ -633,7 +633,6 @@
                             <li class="pt-4 footer-text"> > About us</li>
                             <li class="pt-4 footer-text"> > Our Services</li>
                             <li class="pt-4 footer-text"> > Text 1</li>
-                            <li class="pt-4 footer-text"> > Text 2</li>
                             <li class="pt-4 footer-text"> > Events</li>
                         </div>
                         <div class="col p-0  mx-2" style="list-style-type: none;">
@@ -641,7 +640,7 @@
                             <li class="pt-4 footer-text"> > Our Process</li>
                             <li class="pt-4 footer-text"> > FAQ </li>
                             <li class="pt-4 footer-text"> > Department</li>
-                            <li class="pt-4 footer-text"> > Member</li>
+                        
                         </div>
                     </div>
                 </div>
@@ -668,7 +667,7 @@
                         </div>
 
                         <div>
-                            <hr style="width: 250px;">
+                            <hr style="width: 250px; color:#9900ff;">
                         </div>
 
                         <div class="row d-flex">
@@ -679,7 +678,7 @@
                             </div>
 
                             <div class="col-4">
-                                <img src="./logo/nexus.jpg" style="width: 85px;height:80px;"
+                                <img src="./logo/cash-delivery.avif" style="width: 85px;height:80px;"
                                     class="rounded" alt="" srcset="">
                             </div>
                             <!-- <div class="col">
