hr color changes

--- a/index.html
+++ b/index.html
@@ -734,9 +734,9 @@
 
                     </div>
 
-                    <div>
-                        <hr style="width: 250px; color:#9900ff;">
-                    </div>
+                    
+                        <hr style="width: 250px; color:#15012c;">
+                    
 
                     <div class="row d-flex">
 
