--- a/index.html
+++ b/index.html
@@ -719,12 +719,12 @@
                     <div class="row d-flex">
 
                         <div class="col-4">
-                            <img src="./logo/bkash.png" style="width: 85px;height:80px;" class="rounded" alt=""
+                            <img src="./logo/bkash.png"  class="rounded payment-services-logo" alt=""
                                 srcset="">
                         </div>
 
                         <div class="col-4">
-                            <img src="./logo/rocket.png" style="width: 85px;height:80px;" class="rounded" alt=""
+                            <img src="./logo/rocket.png"  class="rounded payment-services-logo" alt=""
                                 srcset="">
                         </div>
 
@@ -741,12 +741,12 @@
                     <div class="row d-flex">
 
                         <div class="col-4">
-                            <img src="./logo/nogod.png" style="width: 85px;height:80px;" class="rounded" alt=""
+                            <img src="./logo/nogod.png"  class="rounded payment-services-logo" alt=""
                                 srcset="">
                         </div>
 
                         <div class="col-4">
-                            <img src="./logo/cash-delivery.avif" style="width: 85px;height:80px;" class="rounded" alt=""
+                            <img src="./logo/cash-delivery.avif"  class="rounded payment-services-logo" alt=""
                                 srcset="">
                         </div>
                         <!-- <div class="col">
