--- a/index.html
+++ b/index.html
@@ -49,12 +49,22 @@
         }
     </style>
 
+
+    
+
+
+
+
+
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <!-- Toggler Button for mobile view -->
-            <button class="navbar-toggler me-auto" type="button" data-bs-toggle="offcanvas"
+            <button  class="navbar-toggler me-auto" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                <span class="navbar-toggler-icon"></span>
+
+                <!-- <span class="navbar-toggler-icon"></span> -->
+
+                <i class="fa-solid fa-bars"></i>
             </button>
 
             <!-- Middle (Company Logo) -->
