--- a/index.html
+++ b/index.html
@@ -176,7 +176,14 @@
                     <img src="./Product Images/prd_1.jpg" alt="Product 1">
                     <div class="card-body">
                         <h5 class="card-title" data-id="1">Cosrx Advance Snail 92 all in one cream (100ml)</h5>
-                        <p class="card-text text-end">10 ৳</p>
+
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <div class="old-price">13.00৳</div>
+                            <div class="new-price px-2">10.00৳</div>
+                        </div>
+
+
+                        <!-- <p class="card-text text-end">10 ৳</p> -->
                         <button class="button" onclick="addToCart(1)">Add to Cart</button>
                     </div>
                 </div>
@@ -186,7 +193,10 @@
                     <img src="./Product Images/prd_2.jpg" alt="Product 2">
                     <div class="card-body">
                         <h5 class="card-title" data-id="2">Cosrx AHA/BHA Clarifying Treatment Toner</h5>
-                        <p class="card-text text-end">20 ৳</p>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">                            <!-- <div class="old-price">25.00৳</div> -->
+                            <div class="new-price px-2">20.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">20 ৳</p> -->
                         <button class="button " onclick="addToCart(2)">Add to Cart</button>
                     </div>
                 </div>
@@ -196,7 +206,11 @@
                     <img src="./Product Images/prd_3.jpg" alt="Product 3">
                     <div class="card-body">
                         <h5 class="card-title" data-id="3">Cosrx Advance Snail 96 Mucin Power Essence</h5>
-                        <p class="card-text text-end">30 ৳</p>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <!-- <div class="old-price">25.00৳</div> -->
+                            <div class="new-price px-2">30.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">30 ৳</p> -->
                         <button class="button" onclick="addToCart(3)">Add to Cart</button>
                     </div>
                 </div>
@@ -206,7 +220,11 @@
                     <img src="./Product Images/prd_4.jpg" alt="Product 4">
                     <div class="card-body">
                         <h5 class="card-title" data-id="4">Cosrx The Vitamin C 23 Serum</h5>
-                        <p class="card-text text-end">40 ৳</p>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-25" id="bor">
+                            <!-- <div class="old-price">25.00৳</div> -->
+                            <div class="new-price px-2">40.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">40 ৳</p> -->
                         <button class="button" onclick="addToCart(4)">Add to Cart</button>
                     </div>
                 </div>
@@ -216,7 +234,11 @@
                     <img src="./Product Images/prd_5.jpg" alt="Product 5">
                     <div class="card-body">
                         <h5 class="card-title" data-id="5">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
-                        <p class="card-text text-end">50 ৳</p>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <!-- <div class="old-price">25.00৳</div> -->
+                            <div class="new-price px-2">50.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">50 ৳</p> -->
                         <button class="button" onclick="addToCart(5)">Add to Cart</button>
                     </div>
                 </div>
@@ -226,7 +248,11 @@
                     <img src="./Product Images/prd_6.jpg" alt="Product 6">
                     <div class="card-body">
                         <h5 class="card-title" data-id="6"> Missha Ultra Hyalron Foaming Cleanser </h5>
-                        <p class="card-text text-end">60 ৳</p>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <!-- <div class="old-price">25.00৳</div> -->
+                            <div class="new-price px-2">60.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">60 ৳</p> -->
                         <button class="button" onclick="addToCart(6)">Add to Cart</button>
                     </div>
                 </div>
@@ -236,7 +262,11 @@
                     <img src="./Product Images/prd_7.jpg" alt="Product 7">
                     <div class="card-body">
                         <h5 class="card-title" data-id="7"> Missha M B.B Boomer </h5>
-                        <p class="card-text text-end">70 ৳</p>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <div class="old-price">76.00৳</div>
+                            <div class="new-price px-2">70.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">70 ৳</p> -->
                         <button class="button" onclick="addToCart(7)">Add to Cart</button>
                     </div>
                 </div>
@@ -246,7 +276,11 @@
                     <img src="./Product Images/prd_8.jpg" alt="Product 8">
                     <div class="card-body">
                         <h5 class="card-title" data-id="8"> Missha M Perfect Cover B.B Cream </h5>
-                        <p class="card-text text-end">80 ৳</p>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <!-- <div class="old-price">25.00৳</div> -->
+                            <div class="new-price px-2">80.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">80 ৳</p> -->
                         <button class="button" onclick="addToCart(8)">Add to Cart</button>
                     </div>
                 </div>
@@ -256,7 +290,11 @@
                     <img src="./Product Images/prd_9.webp" alt="Product 9">
                     <div class="card-body">
                         <h5 class="card-title" data-id="9"> 3W Clinic Intensive UV Sunblock Cream SPF50+/PA+++ </h5>
-                        <p class="card-text text-end">90 ৳</p>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <!-- <div class="old-price">25.00৳</div> -->
+                            <div class="new-price px-2">90.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">90 ৳</p> -->
                         <button class="button" onclick="addToCart(9)">Add to Cart</button>
                     </div>
                 </div>
@@ -266,7 +304,11 @@
                     <img src="./Product Images/prd_10.jpg" alt="Product 10">
                     <div class="card-body">
                         <h5 class="card-title" data-id="10"> TIAM Daily Sun Care Cream SPF50+ PA++++ </h5>
-                        <p class="card-text text-end">100 ৳</p>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <!-- <div class="old-price">25.00৳</div> -->
+                            <div class="new-price px-2">100.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">100 ৳</p> -->
                         <button class="button" onclick="addToCart(10)">Add to Cart</button>
                     </div>
                 </div>
@@ -276,7 +318,11 @@
                     <img src="./Product Images/prd_11.jpg" alt="Product 11">
                     <div class="card-body">
                         <h5 class="card-title" data-id="11"> Cosrx advance snail 92 all in one cream (Tube) </h5>
-                        <p class="card-text text-end">110 ৳</p>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <!-- <div class="old-price">25.00৳</div> -->
+                            <div class="new-price px-2">110.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">110 ৳</p> -->
                         <button class="button" onclick="addToCart(11)">Add to Cart</button>
                     </div>
                 </div>
@@ -286,7 +332,11 @@
                     <img src="./Product Images/prd_12.webp" alt="Product 12">
                     <div class="card-body">
                         <h5 class="card-title" data-id="12"> AXIS-Y Dark Spot Correcting Glow Serum </h5>
-                        <p class="card-text text-end">120 ৳</p>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                            <!-- <div class="old-price">25.00৳</div> -->
+                            <div class="new-price px-2">120.00৳</div>
+                        </div>
+                        <!-- <p class="card-text text-end">120 ৳</p> -->
                         <button class="button" onclick="addToCart(12)">Add to Cart</button>
                     </div>
                 </div>
