fixed nav cart calculation without delivery charges

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <!-- Cart Total Display -->
                 <div>
-                    <span class="cart-total">0.00 ৳</span>
+                    <span class="cart-total subtotal-value">0.00 ৳</span>
                 </div>
             </div>
         </div>
