--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_1.jpg" alt="Product 1">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="1">Cosrx Advance Snail 92 all in one cream (100ml)</h5>
+                        <h5 class="card-title" data-id="1">Cosrx Advance Snail 92 all in one cream <span class="weight">- 100ml</span> </h5>
 
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <div class="old-price">13.00৳</div>
@@ -192,7 +192,7 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_2.jpg" alt="Product 2">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="2">Cosrx AHA/BHA Clarifying Treatment Toner</h5>
+                        <h5 class="card-title" data-id="2">Cosrx AHA/BHA Clarifying Treatment Toner <span class="weight">- 150ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">                            <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">20.00৳</div>
                         </div>
@@ -205,7 +205,7 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_3.jpg" alt="Product 3">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="3">Cosrx Advance Snail 96 Mucin Power Essence</h5>
+                        <h5 class="card-title" data-id="3">Cosrx Advance Snail 96 Mucin Power Essence <span class="weight">- 100ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">30.00৳</div>
@@ -219,8 +219,8 @@
                 <div class="product-card card h-100 h-100" id="bor">
                     <img src="./Product Images/prd_4.jpg" alt="Product 4">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="4">Cosrx The Vitamin C 23 Serum</h5>
-                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-25" id="bor">
+                        <h5 class="card-title" data-id="4">Cosrx The Vitamin C 23 Serum <span class="weight">- 20ml</span> </h5>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">40.00৳</div>
                         </div>
@@ -233,7 +233,7 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_5.jpg" alt="Product 5">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="5">Cosrx Salicylic Acid Daily Gentle Cleanser </h5>
+                        <h5 class="card-title" data-id="5">Cosrx Salicylic Acid Daily Gentle Cleanser <span class="weight">- 150ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">50.00৳</div>
@@ -247,7 +247,7 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_6.jpg" alt="Product 6">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="6"> Missha Ultra Hyalron Foaming Cleanser </h5>
+                        <h5 class="card-title" data-id="6"> Missha Ultra Hyalron Foaming Cleanser <span class="weight">- 200ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">60.00৳</div>
@@ -261,8 +261,8 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_7.jpg" alt="Product 7">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="7"> Missha M B.B Boomer </h5>
-                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
+                        <h5 class="card-title" data-id="7"> Missha M B.B Boomer <span class="weight">- 40ml</span> </h5>
+                        <div class="product-price d-flex pt-3 pb-3 justify-content-center h-25" id="bor">
                             <div class="old-price">76.00৳</div>
                             <div class="new-price px-2">70.00৳</div>
                         </div>
@@ -275,7 +275,7 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_8.jpg" alt="Product 8">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="8"> Missha M Perfect Cover B.B Cream </h5>
+                        <h5 class="card-title" data-id="8"> Missha M Perfect Cover B.B Cream <span class="weight">- 50ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">80.00৳</div>
@@ -289,7 +289,7 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_9.webp" alt="Product 9">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="9"> 3W Clinic Intensive UV Sunblock Cream SPF50+/PA+++ </h5>
+                        <h5 class="card-title" data-id="9"> 3W Clinic Intensive UV Sunblock Cream SPF50+/PA+++ <span class="weight">- 70ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">90.00৳</div>
@@ -303,7 +303,7 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_10.jpg" alt="Product 10">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="10"> TIAM Daily Sun Care Cream SPF50+ PA++++ </h5>
+                        <h5 class="card-title" data-id="10"> TIAM Daily Sun Care Cream SPF50+ PA++++ <span class="weight">- 50ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">100.00৳</div>
@@ -317,7 +317,7 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_11.jpg" alt="Product 11">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="11"> Cosrx advance snail 92 all in one cream (Tube) </h5>
+                        <h5 class="card-title" data-id="11"> Cosrx advance snail 92 all in one cream <span class="weight">- 50ml</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">110.00৳</div>
@@ -331,7 +331,7 @@
                 <div class="product-card card h-100" id="bor">
                     <img src="./Product Images/prd_12.webp" alt="Product 12">
                     <div class="card-body">
-                        <h5 class="card-title" data-id="12"> AXIS-Y Dark Spot Correcting Glow Serum </h5>
+                        <h5 class="card-title" data-id="12"> AXIS-Y Dark Spot Correcting Glow Serum <span class="weight">- 5gm</span> </h5>
                         <div class="product-price d-flex pt-3 pb-3 justify-content-center h-0" id="bor">
                             <!-- <div class="old-price">25.00৳</div> -->
                             <div class="new-price px-2">120.00৳</div>
